overflow issue resolve

--- a/assets/css/block_time.css
+++ b/assets/css/block_time.css
@@ -21,6 +21,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 /*remove moodle default background, padding and heading end*/
